--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,16 @@
       <section id="main_content" class="inner">
         {{ content }}
       </section>
+      <section id="form-aggregator">
+        <form>
+          First name:<br>
+          <input type="text" name="firstname">
+          <br>
+          Last name:<br>
+          <input type="text" name="lastname">
+        </form>
+
+      </section>
     </div>
 
     <!-- FOOTER  -->
