--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,8 +35,11 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         {{ content }}
+        <p>Hola!! </p>
       </section>
+
       <section id="form-aggregator">
+        <p>Adiosss!! </p>
         <form>
           First name:<br>
           <input type="text" name="firstname">
@@ -44,7 +47,6 @@
           Last name:<br>
           <input type="text" name="lastname">
         </form>
-
       </section>
     </div>
 
