--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,9 @@
       <section id="main_content" class="inner">
         {{ content }}
         <p>Hola!! </p>
+
+
+        <input type="text" id="name" name="name"/>
       </section>
 
       <section id="form-aggregator">
