--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,8 +43,14 @@
           <input type="text" name="lastname">
         </form>
 
+        <form action="javascript:alert('Hello there, I am being submitted');">
+            <button type=submit>
+                Let's do it
+            </button>
+        </form>
+
         {{ content }}
-        
+
         <input type="text" id="name" name="name"/>
       </section>
     </div>
