--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,12 +35,18 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 
-        <form>
-          First name:<br>
+        <form action="/script/script.php">
+          GITHUB-USER:<br>
           <input type="text" name="firstname">
           <br>
-          Last name:<br>
+          GITHUB-TOKEN:<br>
           <input type="text" name="lastname">
+          GITHUB-ORG:<br>
+          <input type="text" name="githuborg">
+          GITHUB-REPO:<br>
+          <input type="text" name="githubrepo">
+          <br>
+          <input type="submit" value="Open Script">
         </form>
 
         <form action="javascript:alert('Hello there, I am being submitted');">
@@ -51,7 +57,6 @@
 
         {{ content }}
 
-        <input type="text" id="name" name="name"/>
       </section>
     </div>
 
