--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,10 +37,10 @@
 
         <form action="/script/script.php">
           GITHUB-USER:<br>
-          <input type="text" name="firstname">
+          <input type="text" name="githubuser">
           <br>
           GITHUB-TOKEN:<br>
-          <input type="text" name="lastname">
+          <input type="text" name="githubtoken">
           <br>
           GITHUB-ORG:<br>
           <input type="text" name="githuborg">
