--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@ function validateForm() {
       <section id="main_content" class="inner">
 
 
-        <form name="myForm" action="/script/run.sh" onsubmit="return validateForm()" method="post">
+        <form name="myForm" onsubmit="return validateForm()" method="post">
           Name: <input type="text" name="fname">
           <input type="submit" value="Submit">
         </form>
