--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
           <input type="submit" value="Submit">
         </form>
 -->
-        <form name="keyForm" action="#" onsubmit="return validateForm()">
+        <form name="keyForm" action="#" onsubmit="return validateForm()" method="post">
           GITHUB-USER:<br>
           <input type="text" name="githubuser">
           <br>
