--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
 {% seo %}
 
-<script type="text/javascript" src="/js/validate.js"></script>
+<script type="text/javascript" src="../js/validate.js"></script>
 
 
 
