--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
           <input type="submit" value="Submit">
         </form>
 -->
-        <form name="keyForm" action="#" onsubmit="return validateFormOnSubmit(this);" method="post">
+        <form name="keyForm" action="#" onsubmit="return validateFormOnSubmit(this);">
           GITHUB-USER:<br>
           <input type="text" name="githubuser">
           <br>
