--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,38 @@
 
 {% seo %}
 
+<!--
 <script type="text/javascript" src="js/validate.js"></script>
+-->
 
+<script>
+  function validateUser(formfield) {
+    //var x = document.forms["keyForm"]["githubuser"].value;
+    var x = formfield;
+    var ex = "the filed " + formfield + "is empty";
+  
+    if (formfiled == "") {
+      //alert("Name must be filled out");
+      return ex;
+    }
+  }
 
+  function validateFormOnSubmit(theForm) {
+    var reason = "";
+    reason += validateUser(theForm.githubuser);
+    reason += validateUser(theForm.githubtoken);
+    reason += validateUser(theForm.githuborg);
+    reason += validateUser(theForm.githubrepo);
+
+    if (reason != "") {
+        alert("Some fields need correction:\n" + reason);
+    } else {
+      alert("Perfect!!:\n");
+        //simpleCart.checkout();
+    }
+    return false;
+}
+</script>
 
  <!-- EMBEBED 
     <script>
